--- a/templates/avaluo_tool.html
+++ b/templates/avaluo_tool.html
@@ -346,7 +346,7 @@
     <section
         class="bg-gray-50 dark:bg-gray-800 p-8 border border-gray-200 dark:border-gray-700 rounded-2xl text-gray-900 dark:text-white">
         <h4
-            class="font-bold text-[11px] uppercase tracking-widest mb-4 flex items-center gap-3 border-b border-gray-700 dark:border-gray-600 pb-2">
+            class="font-bold text-[11px] text-gray-900 dark:text-white uppercase tracking-widest mb-4 flex items-center gap-3 border-b border-gray-700 dark:border-gray-600 pb-2">
             <span class="material-symbols-outlined text-gray-400 font-light">calculate</span>
             LOGICA_CALCULO :: REDONDEO
         </h4>
